# diachron

./: .gitignore  CHANGELOG.md  INSTALL.md  PRE_RELEASE_REVIEW.md  README.md  TROUBLESHOOTING.md  capture-manual.md  capture.md  diachron.md  install.sh  memory.md  search.md  timeline.md
.claude-plugin/: marketplace.json
.github/workflows/: benchmark.yml
benchmarks/: compare_benchmarks.sh  run_benchmarks.sh
benchmarks/results/: benchmark_20260110_170031.md  benchmark_20260110_170148.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/proxy/: server.ts  socket-client.ts  tsconfig.json
dashboard/src/: App.tsx  index.css  router.tsx
dashboard/src/api/: client.ts  hooks.ts
dashboard/src/components/layout/: Layout.tsx  Sidebar.tsx
dashboard/src/components/shared/: ConfidenceBadge.tsx  OperationIcon.tsx  StatCard.tsx  ToolBadge.tsx  index.ts
dashboard/src/pages/: Blame.tsx  Dashboard.tsx  Diagnostics.tsx  Evidence.tsx  Search.tsx  Sessions.tsx  Timeline.tsx  index.ts
dashboard/src/types/: diachron.ts
docs/: IPC-API.md
github-action/: README.md  action.yml  example-workflow.yml  package.json  tsconfig.json
github-action/src/: index.ts
install/: com.diachron.daemon.plist  com.diachron.logrotate.plist  diachron-logrotate.service  diachron-logrotate.timer  diachron.service  logrotate.conf
lib/: capture_event.py  codex_capture.py  db.py  hook_capture.py  summarize.py  test_codex_capture.py  timeline_cli.py
logs/: session_start.json
rust/: Cargo.toml  README.md
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/codex-wrapper/: Cargo.toml
rust/codex-wrapper/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: error.rs  evidence_pack.rs  fingerprint.rs  hash_chain.rs  ipc.rs  lib.rs  pr_correlation.rs  schema.rs  types.rs  vector.rs
rust/daemon/: Cargo.toml
rust/daemon/src/: background.rs  cache.rs  db.rs  handlers.rs  indexer.rs  main.rs  server.rs  summarization.rs
rust/embeddings/: Cargo.toml
rust/embeddings/src/: download.rs  lib.rs
rust/hook/: Cargo.toml
rust/hook/src/: main.rs
rust/src/: main.rs
rust/tests/: integration_tests.rs
tests/: __init__.py  test_db.py  test_hook.py  test_timeline.py
vscode-extension/: .vscodeignore  README.md  diachron-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: decorations.ts  diachronClient.ts  extension.ts  hoverProvider.ts  sidebar.ts
