[package]
name = "diachron-hook"
version = "0.1.0"
edition = "2021"
description = "Fast PostToolUse hook for Diachron provenance tracking"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
# lto = "thin"         # Disabled - was causing stdin read hangs
# codegen-units = 1    # Disabled - related to LTO
strip = true
# panic = "abort"      # Keep unwinding for now
