[workspace]
resolver = "2"
members = [
    "hook",
    "daemon",
    "cli",
    "core",
    "embeddings",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wolfiesch/diachron"
authors = ["Wolfgang Schoenberger"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# IPC
interprocess = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform
dirs = "5"

# Embeddings (Phase 2)
# ort = { version = "2", features = ["download-binaries"] }
# tokenizers = "0.15"

# Vector search (Phase 2)
# usearch = "2"

[profile.release]
opt-level = 3
strip = true
