[workspace]
resolver = "2"
members = [
    "hook",
    "daemon",
    "cli",
    "core",
    "embeddings",
    "codex-wrapper",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wolfiesch/diachron"
authors = ["Wolfgang Schoenberger"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Cryptography (hash chain)
sha2 = "0.10"
hex = "0.4"

# IPC
interprocess = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform
dirs = "5"

# Embeddings (Phase 2)
ort = "2.0.0-rc.11"
tokenizers = "0.20"
ndarray = "0.16"

# Vector search (Phase 2)
usearch = "2"

# HTTP client for model download and API calls
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }

[profile.release]
opt-level = 3
strip = true
