[package]
name = "diachrond"
version.workspace = true
edition.workspace = true
description = "Diachron daemon - long-running service for provenance and memory"

[[bin]]
name = "diachrond"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
interprocess = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
twox-hash = "2"
diachron-core = { path = "../core" }
diachron-embeddings = { path = "../embeddings" }
reqwest = { workspace = true }
toml = "0.8"
