[package]
name = "diachron-embeddings"
version.workspace = true
edition.workspace = true
description = "Embedding engine for Diachron (ONNX-based)"

[lib]
name = "diachron_embeddings"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

# Phase 2: Enable these when implementing embeddings
# ort = { version = "2", features = ["download-binaries"] }
# tokenizers = "0.15"
